@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-08-22"
+set version "2025-08-27"
 set script [file normalize [info script]]
 set title [file tail $script]
 set cwd [pwd]
@@ -440,6 +440,7 @@ set console 0;			# Valid values: 0=hide, 1=show
 
 set ctid [thread::create -joinable "
   package require Tk
+  package require tcl::chan::fifo2
   wm withdraw .
   wm title . \"$title - [mc l99]\"
   set font_size ${console.font.size}
@@ -494,23 +495,27 @@ ctsend {
     .txt yview moveto [lindex $py 0]
   }
 
-  set aid 0
   proc write {text} {
     .txt configure -state normal
-    if {[string index $text 0] == "\r"} {
-      set text [string range $text 1 end]
-      .txt delete end-2l end-1l
+    foreach item [split $text \n] {
+      if {[string index $item 0] == "\r"} {
+	set item [string range $item 1 end]
+	.txt delete end-2l end-1l
+      }
+      if {[string index $item end] == "\b"} {
+	set item [string range $item 0 end-1]
+      } else {
+	append item \n
+      }
+      .txt insert end $item
     }
-    .txt insert end $text
     .txt configure -state disabled
-    # Prevent the console from freezing when
-    # flooded with incoming write requests
-    catch "after cancel $::aid"
-    set ::aid [after 100 {.txt see end}]
+    if {[winfo ismapped .]} {.txt see end}
   }
 
   proc show_hide {show} {
     if {$show} {
+      .txt see end
       if {$::geometry == ""} {
 	wm deiconify .
       } else {
@@ -527,7 +532,20 @@ ctsend {
     }
   }
 
+  lassign [::tcl::chan::fifo2] fdi fdo
+  thread::detach $fdo
+  fconfigure $fdi -blocking 0 -buffering full -buffersize 131072 -translation lf
+  fileevent $fdi readable "
+    set text {}
+    while {\[gets $fdi line\] >= 0} {lappend text \$line}
+    write \[join \$text \\n\]
+  "
 }
+
+set fdo [ctsend "set fdo"]
+thread::attach $fdo
+fconfigure $fdo -blocking 0 -buffering line -translation lf
+interp alias {} ::cputs {} ::puts $fdo
 
 if {$console == 1} {
   set console.show 1
@@ -536,7 +554,6 @@ if {$console == 1} {
 
 # Write to console
 
-proc cputs {text} {thread::send -async $::ctid [list write $text\n]}
 proc cputi {text} {cputs "\[---\] $text"}
 proc cputw {text} {cputs "\[+++\] $text"}
 
@@ -1244,7 +1261,10 @@ checkbutton .output -text [mc c99] \
 	-variable console.show -command show_hide_console
 pack .output -after .buttons -anchor n -expand 1 -fill x
 
-proc show_hide_console {} {ctsend "show_hide ${::console.show}"}
+proc show_hide_console {} {
+  update idletasks
+  ctsend "show_hide ${::console.show}"
+}
 show_hide_console
 
 # Map/Unmap events are generated by Windows only!
@@ -2241,12 +2261,9 @@ proc selection_ok {} {
 
 proc process_start {command process} {
 
-  lassign [chan pipe] fdi fdo
-  set rc [catch "exec $command >&@ $fdo &" result]
-  close $fdo
+  set rc [catch {open "| $command 2>@1" r} result]
 
   if {$rc} {
-    close $fdi
     error_message $result return
     after 0 {set action 0}
     return
@@ -2255,24 +2272,20 @@ proc process_start {command process} {
   namespace eval $process {}
   namespace upvar $process fd fd pid pid exe exe
   set ${process}::command $command
-  set ${process}::cr ""
 
-  set ::$process.tid [thread::create -joinable "thread::wait"]
+  set fd $result
+  set pid [pid $fd]
+  fconfigure $fd -blocking 0 -buffering full -buffersize 131072
 
-  set fd $fdi
-  fconfigure $fd -blocking 0 -buffering line
-
-  set pid $result
   set exe [file tail [lindex $command 0]]
   set mark "\[[string toupper $process]\]"
   cputi "[mc m51 $pid $exe] $mark"
 
-  set cr "\$${process}::cr"
   unset -nocomplain ::$process.eof
   fileevent $fd readable "
-    while {\[gets $fd line\] >= 0} {
-      cputs \"$cr\\$mark \$line\"
-    }
+    set text {}
+    while {\[gets $fd line\] >= 0} {lappend text \"\\$mark \$line\"}
+    if {\$text != {}} {cputs \[join \$text \\n\]}
     if {\[eof $fd\]} {
       cputi \"\[mc m52 $pid $exe\] \\$mark\"
       namespace delete $process
@@ -2506,7 +2519,6 @@ proc srv_start {} {
 
   if {![process_running srv]} {error_message [mc m55 $text] return; return}
   set srv::port $port
-  set srv::cr \r
 
 }
 
@@ -2537,17 +2549,14 @@ proc pipe_run {exe args} {
   if {$rc} {return [list $rc $result]}
 
   set fd $result
-  fconfigure $fd -blocking 0 -buffering line
+  fconfigure $fd -blocking 0 -buffering full -buffersize 131072
   namespace eval pipe {}
   set pipe::pid [pid $fd]
   set pipe::exe $exe
   fileevent $fd readable "
-    while {\[gets $fd line\] >= 0} {
-      cputs \"\\r> $exe \$line\"
-    }
-    if {\[eof $fd\]} {
-      set pipe::rc \[catch {close $fd} pipe::result]
-    }"
+    while {\[gets $fd line\] >= 0} {cputs \"\\r> $exe \$line\"}
+    if {\[eof $fd\]} {set pipe::rc \[catch {close $fd} pipe::result]}
+    "
   if {![info exists pipe::rc]} {vwait pipe::rc}
   set return [list $pipe::rc $pipe::result]
   namespace delete pipe
@@ -2597,7 +2606,7 @@ proc download_with_curl {} {uplevel 1 {
   set count 0
   set valid 0
 
-# cputs "\r[get_shell_command $curl_exec]\n"
+# cputs [get_shell_command $curl_exec]
   set rc [catch {open "| $curl_exec" r} result]
   if {$rc} {
     error_message "Download $url:\n$result" return
@@ -2608,12 +2617,15 @@ proc download_with_curl {} {uplevel 1 {
   }
 
   set fd $result
-  fconfigure $fd -blocking 0 -buffering line
+  fconfigure $fd -blocking 0 -buffering full -buffersize 131072
   namespace eval pipe {}
   set pipe::pid [pid $fd]
   set pipe::exe [file tail $::curl]
+  cputi [mc m51 $pipe::pid $pipe::exe]
+
   lassign {-1 unknown} ::curl_rc ::curl_result
   fileevent $fd readable "
+    set text {}
     while {\[gets $fd line\] >= 0} {
       if {\[info exists pipe::abort\]} continue
       if {\[string range \$line 0 1\] != {! }} {
@@ -2621,11 +2633,14 @@ proc download_with_curl {} {uplevel 1 {
       } else {
 	lmap {name value} \[string range \$line 2 end\] {set \$name \$value}
 	if {\$curl_rc} {
-	  cputs \"> curl error \$curl_rc: \$curl_result\"
+	  lappend text \"> error \$curl_rc: \$curl_result\"
 	  set pipe::abort 1
+  	#} else {
+	#  lappend text \"> GET \$curl_url -> HTTP status \$curl_status, \$curl_size bytes data\"
 	}
       }
     }
+    if {\$text != {}} {cputs \[join \$text \\n\]}
     if {\[eof $fd\]} {
       set pipe::result \$curl_result
       set pipe::rc \$curl_rc
@@ -2633,6 +2648,7 @@ proc download_with_curl {} {uplevel 1 {
     }"
   if {![info exists pipe::rc]} {vwait pipe::rc}
   lassign [list $pipe::rc $pipe::result] rc result
+  cputi [mc m52 $pipe::pid $pipe::exe]
   namespace delete pipe
 
   if {$rc || $::cancel} {return 1}
@@ -2752,7 +2768,7 @@ proc run_render_job {} {
     if {$task == "Map"} {set suffix png}
     if {$task == "Hillshading"} {set suffix ovl}
 
-    cputs "\n[mc m70 $url] ...\n"
+    cputs "\n[mc m70 $url] ..."
 
     puts $fdlog $logsep
     puts $fdlog "Download tiles from URL '$url' ..."
@@ -2773,8 +2789,8 @@ proc run_render_job {} {
     # Measure time(s)
 
     set time [expr $stop-$start]
-    cputs "\n[mc m75 $time $valid]"
-    if {$valid} {cputs "[mc m76 [format "%.1f" [expr $time/(1.*$valid)]]]"}
+    cputs [mc m75 $time $valid]
+    if {$valid} {cputs [mc m76 [format "%.1f" [expr $time/(1.*$valid)]]]}
     cputs "... [mc m77]"
 
     if {$valid == 0} {set rc 1}
@@ -2785,7 +2801,7 @@ proc run_render_job {} {
 
   # Stop multi task server
 
-  cputs \n
+  cputs ""
   srv_stop
 
   # Download cancelled or ended abnormally
@@ -3098,7 +3114,7 @@ foreach item {global theme shading tiles} {save_${item}_settings}
 
 if {[ctsend "winfo ismapped ."]} {
   ctsend "
-    write \"\n[mc m99]\"
+    write \"\n[mc m99]\b\"
     wm protocol . WM_DELETE_WINDOW {}
     bind . <ButtonRelease-3> {destroy .}
     tkwait window .
